[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/UI/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Minigames/DangoGame1/TakoPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Minigames/DangoGame1/DangoGame1.gd" type="Script" id=4]
[ext_resource path="res://Assets/Music/InaLoadBGM.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Minigames/DangoGame1/Bowl.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Tako/Emotes.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/UI/CountDownTimer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Fonts/ArialRound/ArialRound-regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/Minigames/WhackTako/UI/GameOverScreen.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 276.636, 318.838 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 180, 137.203 )

[sub_resource type="DynamicFont" id=3]
size = 72
use_filter = true
font_data = ExtResource( 9 )

[node name="DangoGame1" type="Node2D"]
script = ExtResource( 4 )

[node name="Dangos" type="Node2D" parent="."]

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 941.552, 845.7 )
node_a = NodePath("../TakoPlayer")
node_b = NodePath("../Bowl")
bias = 0.552

[node name="TakoPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 941.552, 927.289 )
MAX_SPEED = 50
ACCELERATION = 30
FRICTION = 10

[node name="CountArea" type="Area2D" parent="TakoPlayer"]
position = Vector2( 0, -411.036 )
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TakoPlayer/CountArea"]
shape = SubResource( 1 )

[node name="Bowl" parent="." instance=ExtResource( 6 )]
position = Vector2( 941.552, 790.135 )

[node name="Walls" type="StaticBody2D" parent="."]
position = Vector2( 0, 922.893 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
shape = SubResource( 2 )

[node name="Walls2" type="StaticBody2D" parent="."]
position = Vector2( 1920, 925.012 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls2"]
shape = SubResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Count" type="Label" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -369.0
margin_top = -257.756
margin_right = 369.0
margin_bottom = -172.756
custom_fonts/font = SubResource( 3 )
text = "Dangos: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="UI" instance=ExtResource( 1 )]
visible = false

[node name="CountDownTimer" parent="UI" instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -295.5
margin_right = 295.5

[node name="GameOverScreen" parent="UI" instance=ExtResource( 11 )]
visible = false

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SpawnTimer2" type="Timer" parent="."]
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SpawnCoin" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="Emotes" parent="." instance=ExtResource( 7 )]
position = Vector2( 904.704, 50.0983 )
rotation = 3.14159
scale = Vector2( 1, 1 )
z_index = 1
frame = 25
[connection signal="end_timer" from="UI/CountDownTimer" to="." method="_on_CountDownTimer_end_timer"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="SpawnTimer2" to="." method="_on_SpawnTimer2_timeout"]
[connection signal="timeout" from="SpawnCoin" to="." method="_on_SpawnCoin_timeout"]
